5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1845_2222.log
== TEST (2019-06-26 15:11:56) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i <= dim:
	linha = array(eval(input("Linha:"), i))
	matriz [i] = linha
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:26) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i <= dim:
	linha = array(eval(input("Linha: "), i))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:44) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i <= dim:
	linha = array(eval(input("Linha: ", i)))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:51) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i <= dim:
	linha = array(eval(input("Linha: ", i)))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:54) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i <= dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:13:14) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i < dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:13:19) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i < dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:13:39) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i < dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:18:17) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i < dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(dim-1):
	for j in range(dim-1):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if i == dim - 1 - j
			soma_sec = soma_sec + matriz[i, j]
print(soma_prin - soma_sec)
-- ERROR:
File "XXXX", line 21
    if i == dim - 1 - j
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:18:32) 
-- CODE:
from numpy import *

dim = int(input("Dimensao: "))

matriz = zeros((dim, dim), dtype=int)

i = 0

while i < dim:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(dim-1):
	for j in range(dim-1):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (i == dim - 1 - j):
			soma_sec = soma_sec + matriz[i, j]
print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:20:07) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(dim):
	for j in range(dim):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (i == dim - 1 - j):
			soma_sec = soma_sec + matriz[i, j]
print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:20:40) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:21:02) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:24:50) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(dim):
	for j in range(dim):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (j == dim - 1 - i):
			soma_sec = soma_sec + matriz[i, j]
			print(matriz[i, j])
print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:25:22) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(dim):
	for j in range(dim):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]
			print(matriz[i, j])
print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:25:50) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(n):
	for j in range(n):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]
			print(matriz[i, j])
print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:26:27) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(n):
	for j in range(n):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]

print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:26:47) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))
dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(n):
	for j in range(n):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]

print(soma_prin - soma_sec)
-- EXECUTION TIME:
1.16039
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:37) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))

dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(n):
	for j in range(n):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
			
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]

print(soma_prin - soma_sec)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:55) 
-- CODE:
from numpy import *

n = int(input("Dimensao: "))

dim = n - 1

matriz = zeros((n, n), dtype=int)

i = 0

while i < n:
	linha = array(eval(input("Linha: ")))
	matriz [i] = linha
	i = i + 1
	
soma_prin = 0
soma_sec = 0

for i in range(n):
	for j in range(n):
		if i == j:
			soma_prin = soma_prin + matriz[i, j]
			
		if (j == dim - i):
			soma_sec = soma_sec + matriz[i, j]

print(soma_prin - soma_sec)
-- EXECUTION TIME:
1.07298
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
